@@ -5,6 +5,7 @@ package org.sdo.sct.mt;
 
 import java.io.BufferedReader;
 import java.io.File;
+import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.URL;
@@ -14,12 +15,18 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Attribute;
+import org.jsoup.nodes.Document;
+import org.jsoup.select.Elements;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+
 
 
 @Service
@@ -34,6 +41,8 @@ public class OnDieCache {
   private HashMap<String, byte[]> cacheMap = new HashMap<String, byte[]>();
 
   private boolean initialized;
+
+  private final String cacheUpdatedTouchFile = "cache_updated";
 
   /**
    * Constructor.
@@ -54,6 +63,7 @@ public class OnDieCache {
         this.sourceUrl.add(new URL(url));
       }
     } else {
+      // defaults: the public facing sites containing OnDie artifacts
       this.sourceUrl.add(new URL("https://tsci.intel.com/content/OnDieCA/certs/"));
       this.sourceUrl.add(new URL("https://tsci.intel.com/content/OnDieCA/crls/"));
     }
@@ -90,19 +100,21 @@ public class OnDieCache {
         in = new BufferedReader(new InputStreamReader(
           urlConn.getInputStream()));
 
-        String inputLine;
-        while ((inputLine = in.readLine()) != null) {
-          if (inputLine.contains("<a href=")) {
-            String filename = "";
-            if (inputLine.contains(".cer")) {
-              filename = inputLine.substring(inputLine.indexOf("href=\"") + 6, inputLine.indexOf(".cer") + 4);
-            } else if (inputLine.contains(".crl")) {
-              filename = inputLine.substring(inputLine.indexOf("href=\"") + 6, inputLine.indexOf(".crl") + 4);
-            }
-            if (!filename.isEmpty()) {
-              URL fileUrl = new URL(url, filename);
-              byte[] fileBytes = fileUrl.openConnection().getInputStream().readAllBytes();
-              Files.write(Paths.get(cacheDir, filename), fileBytes);
+        // loop through all the href entries and for each .crl and .cer
+        // links, download the file and store locally
+        Document doc = Jsoup.connect(url.toString()).get();
+        Elements elements = doc.select("a[href]");
+        for (int i = 0; i < elements.size(); i++) {
+          Iterator<Attribute> iattr = elements.get(i).attributes().iterator();
+          while (iattr.hasNext()) {
+            Attribute attr = iattr.next();
+            if (attr.getKey().equals("href")) {
+              String hrefValue = attr.getValue();
+              if (hrefValue.contains(".cer") || hrefValue.contains(".crl")) {
+                URL fileUrl = new URL(url, hrefValue);
+                byte[] fileBytes = fileUrl.openConnection().getInputStream().readAllBytes();
+                Files.write(Paths.get(cacheDir, hrefValue), fileBytes);
+              }
             }
           }
         }
@@ -129,12 +141,30 @@ public class OnDieCache {
       if (!cache.exists()) {
         throw new IOException("OnDieCertCache: cache directory does not exist: " + cacheDir);
       }
+
+      // check for the "files updated" touch file
+      if (Files.exists(Paths.get(cache.getAbsolutePath(), cacheUpdatedTouchFile))) {
+        // rename all .new files and remove touch file
+        FilenameFilter filter = (dir, name) -> name.endsWith(".new");
+        File[] files = new File(cache.getAbsolutePath()).listFiles(filter);
+        for (File file: files) {
+          File targetFile = new File(file.getAbsolutePath().replaceAll(".new",""));
+          targetFile.delete();
+          file.renameTo(targetFile);
+          file.delete();
+        }
+        Files.delete(Paths.get(cacheDir, cacheUpdatedTouchFile));
+      }
+
+      // Read each file and load into the hashmap
       File[] files = new File(cache.getAbsolutePath()).listFiles();
-      for (File file : files) {
-        if (!file.isDirectory()) {
-          if (file.getName().toLowerCase().endsWith(".cer")
-              || file.getName().toLowerCase().endsWith(".crl")) {
-            cacheMap.put(file.getName(), Files.readAllBytes(Paths.get(file.getAbsolutePath())));
+      if (files != null) {
+        for (File file : files) {
+          if (!file.isDirectory()) {
+            if (file.getName().toLowerCase().endsWith(".cer")
+                || file.getName().toLowerCase().endsWith(".crl")) {
+              cacheMap.put(file.getName(), Files.readAllBytes(Paths.get(file.getAbsolutePath())));
+            }
           }
         }
       }
